--- a/Renia_MachineProb.css
+++ b/Renia_MachineProb.css
@@ -5,21 +5,21 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    }
-    
-    .container {
+}
+
+.container {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 50px;
-    }
+}
 
-    .buttons {
+.buttons {
     display: flex;
     flex-direction: column;
-    }
- 
-    button {
+}
+
+button {
     padding: 12px 25px;
     margin: 5px;
     font-size: 16px;
@@ -30,22 +30,22 @@ body {
     transition: all 0.3s ease-in-out;
     width: 160px;
     text-align: center;
-    }
-    
-    button:nth-child(1) { background-color: #6a0dad; color: white; }
-    button:nth-child(2) { background-color: #f4cccc; } 
-    button:nth-child(3) { background-color: #0000ff; color: white; } 
-    button:nth-child(4) { background-color: #00ff00; } 
-    button:nth-child(5) { background-color: #ffff00; } 
-    button:nth-child(6) { background-color: #ff9900; } 
-    button:nth-child(7) { background-color: #ff0000; color: white; } 
-   
-    button:hover {
+}
+
+button:nth-child(1) { background-color: #6a0dad; color: white; }
+button:nth-child(2) { background-color: #f4cccc; } 
+button:nth-child(3) { background-color: #0000ff; color: white; } 
+button:nth-child(4) { background-color: #00ff00; } 
+button:nth-child(5) { background-color: #ffff00; } 
+button:nth-child(6) { background-color: #ff9900; } 
+button:nth-child(7) { background-color: #ff0000; color: white; } 
+
+button:hover {
     transform: scale(1.05);
     filter: brightness(90%);
-    }
-    
-    .box-container {
+}
+
+.box-container {
     position: relative;
     width: 250px;
     height: 250px;
@@ -54,9 +54,9 @@ body {
     align-items: flex-start;
     border: 3px dashed #ddd;
     padding: 20px;
-    }
-  
-    .box {
+}
+
+.box {
     width: 200px;
     height: 200px;
     border: 3px solid transparent;
@@ -70,6 +70,5 @@ body {
     font-size: 20px;
     font-weight: bold;
     color: black;
-    transition: transform 1s ease-in-out, background-color 0.5s ease-in-out 1s, opacity 0.3s ease-in-out, border-color 0.5s ease-in-out;
-    }
-    
+    transition: transform 2s ease-in-out, background-color 1s ease-in-out, opacity 1s ease-in-out, border-color 1s ease-in-out;
+}
