--- a/Renia_MachineProb.css
+++ b/Renia_MachineProb.css
@@ -5,6 +5,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -12,17 +14,21 @@ body {
     flex-direction: row;
     align-items: center;
     gap: 50px;
+    max-width: 90vw;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .buttons {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 button {
     padding: 12px 25px;
     margin: 5px;
-    font-size: 16px;
+    font-size: 1rem;
     cursor: pointer;
     border: 2px solid black;
     font-weight: bold;
@@ -47,7 +53,8 @@ button:hover {
 
 .box-container {
     position: relative;
-    width: 250px;
+    width: 80vw;
+    max-width: 250px;
     height: 250px;
     display: flex;
     justify-content: center;
@@ -57,18 +64,9 @@ button:hover {
 }
 
 .box {
-    width: 200px;
-    height: 200px;
+    width: 80%;
+    height: 80%;
     border: 3px solid transparent;
     position: absolute;
     top: 0;
-    opacity: 0;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-    transition: transform 2s ease-in-out, background-color 1s ease-in-out, opacity 1s ease-in-out, border-color 1s ease-in-out;
-}
+    opacity
