--- a/Renia_MachineProb.css
+++ b/Renia_MachineProb.css
@@ -69,4 +69,55 @@ button:hover {
     border: 3px solid transparent;
     position: absolute;
     top: 0;
-    opacity
+    opacity: 0;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: black;
+    transition: transform 2s ease-in-out, background-color 1s ease-in-out, opacity 1s ease-in-out, border-color 1s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    button {
+        width: 140px;
+        font-size: 0.9rem;
+    }
+
+    .box-container {
+        width: 70vw;
+        height: 200px;
+    }
+
+    .box {
+        font-size: 1rem;
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    button {
+        width: 120px;
+        font-size: 0.8rem;
+        padding: 10px 20px;
+    }
+
+    .box-container {
+        width: 60vw;
+        height: 180px;
+    }
+
+    .box {
+        font-size: 0.9rem;
+        width: 100%;
+        height: 100%;
+    }
+}
